# fusion-mail

./: .gitignore  Cargo.toml  Dockerfile  README.md  cheatsheet.md  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20220501051538_create_subscriptions_table.sql
scripts/: deps_test.sh  init_db.sh
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/configuration/: configuration.rs
src/routes/: subscriptions.rs
src/startup/: run.rs
src/telemetry/: subscribers.rs
tests/: health_check.rs
