[package]
name = "fusion-mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fusion-mail"

[dev-dependencies]
once_cell = "1.10.0"
reqwest = "0.11"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
imap = "2"
dotenv = "0"
serde = { version = "1", features = ["derive"] }
config = "0"
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.16"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2" 
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]